# watchlog

./: Cargo.toml  LICENSE  README.md  index.html  install.sh  log1.txt  log1.txt.save  log2.txt  newfile.txt  report3.tex  report4.tex  report5.tex  template.tex  watch-log.service  watchlog.service
app/: .gitignore  Cargo.toml  compression.test  config.json  config.toml  config_toml_bak  dummy.data  file.txt  log2.txt.save  template.tex
app/src/: client.rs  decrypt.rs  generate.rs  main.rs  server.rs  storage-controller.rs  types.rs
docs/: .$design.drawio.bkp  .$design.drawio.dtmp  .gitignore  CNAME  PRD.md  README.md  SDA.md  SDP.md  design.drawio  index.html
reports/: dec.sh  decompress_then_dec.sh  enc.sh  enc_then_compress.sh  project-archive.tex  report6.tex.aes256  report7.tex  report7.tex.aes256  template.tex  texclean.sh
site/: index.html
src/: client.rs  main.rs  server.rs  watch-log-manager.rs
