[package]
name = "watch-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.201"
serde_derive = "1.0.201"
signal-hook = "0.3.17"
toml = "0.8.12"

[[bin]]
name = "manager"
path = "src/watch-log-manager.rs"

