[package]
name = "watchlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
signal-hook = "0.3.17"

[[bin]]
name = "server"
path = "src/server.rs"

