[package]
name = "watchlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
#openssl = "0.10.64"
openssl = { version = "0.10.64", features = ["vendored"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
signal-hook = "0.3.17"
zstd = "0.13.1"

[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "generate"
path = "src/generate.rs"
